--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	"type": "module",
 	"dependencies": {
 		"@fontsource/fira-mono": "^4.5.0",
+		"axios": "^0.27.2",
 		"circletype": "^2.3.0",
 		"cookie": "^0.4.1"
 	}
